force-app/main/default/objects/DOF_Utility_Bill__c/DOF_Utility_Bill__c.object-meta.xml
<CustomObject>
    <label>Utility Bill</label>
    <nameField>
        <displayFormat>UTL-{00000}</displayFormat>
        <label>Utility Bill Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utility Bills</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>