force-app/main/default/objects/DOF_Utility_Bill__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Utility Bills</relationshipLabel>
    <relationshipName>Utility_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>