force-app/main/default/objects/DOF_Utility_Bill__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <label>Organization</label>
    <length>240</length>
    <type>Text</type>
</CustomField>