force-app/main/default/objects/DOF_Utility_Bill__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Not_Paid</fullName>
                <label>Not Paid</label>
            </value>
            <value>
                <fullName>Delinquent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>