force-app/main/default/objects/DOF_Utility_Bill__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electricity</fullName>
            </value>
            <value>
                <fullName>Garbage_Waste</fullName>
                <label>Garbage/Waste</label>
            </value>
            <value>
                <fullName>Heating_Cooling</fullName>
                <label>Heating/Cooling</label>
            </value>
            <value>
                <fullName>Natural_Gas</fullName>
                <label>Natural Gas</label>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Sewer</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>